# utrace

./: .gitignore  LICENSE.md  README.md  pyproject.toml
scripts/: ACDC_example.py  MNIST_class_conditional_example.py  MNIST_example.py  MNIST_test_convergence.py  MNIST_test_coverage.py  btorch_MNIST_test.py  convergence_analysis.py  data_size_analysis.py  setsize_analysis.py
src/utrace/: __init__.py  __main__.py  cli.py  scores.py  uncertaintyQuantifier.py
src/utrace/tests/: test_utils.py
src/utrace/utils/: utils.py
src/utrace/utils/pytorch/: dataset_wrapper.py  example_models.py  model_wrapper.py  to_jax.py  transforms.py
